--- a/tdi_lab.ipynb
+++ b/tdi_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d1f81b0",
+   "id": "da624fbf",
    "metadata": {},
    "source": [
     "\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d3798f",
+   "id": "344f8aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953e12f3",
+   "id": "5769ae58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9592e68",
+   "id": "ab2f4013",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5bdcbb",
+   "id": "67777b36",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45589b23",
+   "id": "478dfd3f",
    "metadata": {},
    "source": [
     "## Task 1: Map Reduce\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8651b4b2",
+   "id": "678c3297",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7df3174d",
+   "id": "a4fa10fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95342f5",
+   "id": "07ee8f16",
    "metadata": {},
    "source": [
     "#### Test run with example data"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb79487",
+   "id": "6d749a22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a453bcfd",
+   "id": "af79f3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34fe3d00",
+   "id": "d66a599a",
    "metadata": {},
    "source": [
     "#### Test run with a Shakespeare text"
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4808e296",
+   "id": "2bbc1aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96290d5f",
+   "id": "dcecc06f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f493fa",
+   "id": "bfc757cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13554e09",
+   "id": "8f752450",
    "metadata": {},
    "source": [
     "### Document Count Exercise\n",
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "484d4b30",
+   "id": "97702af7",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a951d125",
+   "id": "663ff648",
    "metadata": {},
    "source": [
     "#### Test run with example data"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa6f3f7",
+   "id": "bc6c525c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79345c1f",
+   "id": "f4c58bbf",
    "metadata": {},
    "source": [
     "#### Test run with a shakespeare text (from above)"
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9b7a8f",
+   "id": "35a6f57b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d4e3e6",
+   "id": "76993fdd",
    "metadata": {},
    "source": [
     "### N-Gram Count Exercise\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06b8551",
+   "id": "9b5da048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0363bc",
+   "id": "15b7d078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c4d0ac",
+   "id": "0abee425",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2b36f1",
+   "id": "bfbec1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de0ef31",
+   "id": "5a7f9a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e64594",
+   "id": "17c34cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d667131",
+   "id": "da19e9d9",
    "metadata": {},
    "source": [
     "\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "659f6b71",
+   "id": "0a747aa2",
    "metadata": {},
    "source": [
     "### Word Count (Spark)\n",
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136b3286",
+   "id": "0526a1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a712402",
+   "id": "84d36998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63dc6995",
+   "id": "80ec3084",
    "metadata": {},
    "source": [
     "### Document Count (Spark)\n",
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1419892",
+   "id": "c243d695",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83d5070",
+   "id": "97aa1429",
    "metadata": {},
    "source": [
     "### n-gram Count (Spark)\n",
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab9ac72",
+   "id": "4e9ce53f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b190c1",
+   "id": "025f12b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb24992",
+   "id": "8305b1da",
    "metadata": {},
    "source": [
     "## Task 3: A more complex spark task\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed069e3b",
+   "id": "2adcc669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8103e3",
+   "id": "7d7135eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12bc1434",
+   "id": "d0dd1f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcc0a53a",
+   "id": "e193b69c",
    "metadata": {},
    "source": [
     "### Bonus: Mutual friends of friends\n",
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0eab870",
+   "id": "08cd59bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffba380",
+   "id": "340389fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac7c2b6",
+   "id": "d77b6007",
    "metadata": {},
    "source": [
     "## Understanding RDDs"
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6df38f0",
+   "id": "014bac42",
    "metadata": {},
    "source": [
     "To use RDDs effectively, it is important to understand the underlying dataflow\n",
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0194ad04",
+   "id": "a79976f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc42619",
+   "id": "7ff31060",
    "metadata": {},
    "source": [
     "### a)\n",
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57987c5e",
+   "id": "f8c6e834",
    "metadata": {},
    "source": [
     "### b)\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cac9adb",
+   "id": "20accd62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,18 +989,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b660be13",
+   "id": "743b0555",
    "metadata": {},
    "source": [
     "### c)\n",
     "\n",
-    "The program can output a sample size larger than 1000. Why?\n"
+    "The program can output a sample size larger than 1000. Why?\n",
+    "\n",
+    "\n",
+    "### d)\n",
+    "\n",
+    "Assume that there are no failures in the cluster while running your program.\n",
+    "Suggest how to fix the above program using the cache. (The goal is to get an\n",
+    "RDD representing a sample of size at most 1000.)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deda2bdd",
+   "id": "520a9a32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c4937f",
+   "id": "2a88172e",
    "metadata": {},
    "source": [
     "### e)\n",
@@ -1021,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93cc2b16",
+   "id": "7e5a6971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0a3f86",
+   "id": "77303450",
    "metadata": {},
    "source": [
     "### f)\n",
@@ -1046,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af6d088",
+   "id": "e4b75aa7",
    "metadata": {},
    "outputs": [],
    "source": [
